--- a/LoginDlg.ui
+++ b/LoginDlg.ui
@@ -40,15 +40,16 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>100</x>
      <y>70</y>
-     <width>270</width>
-     <height>35</height>
+     <width>371</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>18</pointsize>
+     <family>华文楷体</family>
+     <pointsize>20</pointsize>
     </font>
    </property>
    <property name="text">
@@ -79,6 +80,12 @@
      <height>35</height>
     </size>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="placeholderText">
     <string>请输入账号</string>
    </property>
@@ -103,6 +110,12 @@
      <width>250</width>
      <height>35</height>
     </size>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
@@ -134,7 +147,8 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <family>华文楷体</family>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -175,7 +189,8 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <family>华文楷体</family>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -193,7 +208,7 @@
   <widget class="QLabel" name="planelabel">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>80</x>
      <y>70</y>
      <width>40</width>
      <height>40</height>
