--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -22,6 +22,12 @@
      <height>30</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="placeholderText">
     <string>请输入账号</string>
    </property>
@@ -34,6 +40,12 @@
      <width>250</width>
      <height>30</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
@@ -53,7 +65,8 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <family>华文楷体</family>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -79,7 +92,8 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>20</pointsize>
+     <family>华文楷体</family>
+     <pointsize>18</pointsize>
     </font>
    </property>
    <property name="styleSheet">
@@ -103,6 +117,12 @@
      <height>30</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文楷体</family>
+     <pointsize>13</pointsize>
+    </font>
+   </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
@@ -113,15 +133,16 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>60</y>
-     <width>101</width>
-     <height>31</height>
+     <x>210</x>
+     <y>70</y>
+     <width>161</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>18</pointsize>
+     <family>华文楷体</family>
+     <pointsize>20</pointsize>
     </font>
    </property>
    <property name="text">
@@ -150,8 +171,8 @@
   <widget class="QLabel" name="registerlabel">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>55</y>
+     <x>160</x>
+     <y>70</y>
      <width>40</width>
      <height>40</height>
     </rect>
