--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,24 +26,209 @@
    <string>登录窗口</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <widget class="QLabel" name="planelabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>5</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="figures.qrc">:/img/source/figures/plane.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="titlelabel">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>5</y>
+      <width>270</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>华文楷体</family>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>航班管理系统（客户端）</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignmentFlag::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="backBtn">
+    <property name="geometry">
+     <rect>
+      <x>590</x>
+      <y>10</y>
+      <width>80</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>退出登录</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>12</y>
+      <width>100</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>UserName</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>修改密码</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>退出登录</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="Line" name="horizontalline">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>40</y>
+      <width>800</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Orientation::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="flightQueryBtn">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>70</y>
+      <width>110</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>航班查询</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="myOrdersBtn">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>150</y>
+      <width>110</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>我的订单</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="myFavoritesBtn">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>230</y>
+      <width>110</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>我的收藏</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="personalCenterBtn">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>310</y>
+      <width>110</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>个人中心</string>
+    </property>
+   </widget>
+   <widget class="Line" name="Verticalline">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>50</y>
+      <width>20</width>
+      <height>550</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Orientation::Vertical</enum>
+    </property>
+   </widget>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>20</y>
+      <x>200</x>
+      <y>80</y>
       <width>490</width>
       <height>310</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page">
-     <widget class="QLabel" name="label_2">
+     <widget class="QLabel" name="label_1">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>90</y>
+        <x>210</x>
+        <y>130</y>
         <width>80</width>
         <height>50</height>
        </rect>
@@ -59,13 +244,13 @@
      </widget>
     </widget>
     <widget class="QWidget" name="page_2">
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>40</y>
-        <width>81</width>
-        <height>51</height>
+        <x>210</x>
+        <y>130</y>
+        <width>80</width>
+        <height>50</height>
        </rect>
       </property>
       <property name="font">
@@ -82,10 +267,10 @@
      <widget class="QLabel" name="label_3">
       <property name="geometry">
        <rect>
-        <x>160</x>
-        <y>70</y>
-        <width>81</width>
-        <height>51</height>
+        <x>210</x>
+        <y>130</y>
+        <width>80</width>
+        <height>50</height>
        </rect>
       </property>
       <property name="font">
@@ -102,10 +287,10 @@
      <widget class="QLabel" name="label_4">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>100</y>
-        <width>81</width>
-        <height>51</height>
+        <x>210</x>
+        <y>130</y>
+        <width>80</width>
+        <height>50</height>
        </rect>
       </property>
       <property name="font">
@@ -119,109 +304,10 @@
      </widget>
     </widget>
    </widget>
-   <widget class="QPushButton" name="flightQueryBtn">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>30</y>
-      <width>100</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>18</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>航班查询</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="personalCenterBtn">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>260</y>
-      <width>100</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>18</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>个人中心</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="myFavoritesBtn">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>190</y>
-      <width>100</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>18</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>我的收藏</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="myOrdersBtn">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>110</y>
-      <width>100</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>18</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>我的订单</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="backBtn">
-    <property name="geometry">
-     <rect>
-      <x>585</x>
-      <y>497</y>
-      <width>81</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>11</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>返回登录</string>
-    </property>
-   </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="figures.qrc"/>
+ </resources>
  <connections/>
 </ui>
