--- a/RegisterDlg.ui
+++ b/RegisterDlg.ui
@@ -25,7 +25,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="bglabel">
+  <widget class="QLabel" name="bgLabel">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -180,7 +180,7 @@
     <string>用户注册</string>
    </property>
   </widget>
-  <widget class="QLabel" name="registerlabel">
+  <widget class="QLabel" name="registerLabel">
    <property name="geometry">
     <rect>
      <x>190</x>
@@ -199,7 +199,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="accountlabel">
+  <widget class="QLabel" name="accountLabel">
    <property name="geometry">
     <rect>
      <x>110</x>
@@ -218,7 +218,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="passwordlabel">
+  <widget class="QLabel" name="passwordLabel">
    <property name="geometry">
     <rect>
      <x>110</x>
@@ -237,7 +237,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="repasswordlabel">
+  <widget class="QLabel" name="repasswordLabel">
    <property name="geometry">
     <rect>
      <x>110</x>
