--- a/figures.qrc
+++ b/figures.qrc
@@ -6,16 +6,15 @@
         <file>source/figures/plane.png</file>
         <file>source/figures/register.png</file>
         <file>source/figures/repassword.png</file>
-        <file>source/figures/gender1.png</file>
-        <file>source/figures/gender2.png</file>
-        <file>source/figures/flightschedule.png</file>
-        <file>source/figures/shopcar.png</file>
-        <file>source/figures/star.png</file>
-        <file>source/figures/personal_Info.png</file>
-        <file>source/figures/button1.png</file>
-        <file>source/figures/p1.png</file>
-        <file>source/figures/p2.png</file>
-        <file>source/figures/p3.png</file>
-        <file>source/figures/p4.png</file>
+        <file>source/figures/flightQuery.png</file>
+        <file>source/figures/myOrders.png</file>
+        <file>source/figures/myFavorites.png</file>
+        <file>source/figures/personalCenter.png</file>
+        <file>source/figures/male.png</file>
+        <file>source/figures/female.png</file>
+        <file>source/figures/flightManagement.png</file>
+        <file>source/figures/orderView.png</file>
+        <file>source/figures/userManagement.png</file>
+        <file>source/figures/dataStatistics.png</file>
     </qresource>
 </RCC>
